Make sure nothing overlaps footer

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -34,6 +34,7 @@ a {
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 999;
 }
 
 .nav-bar a {
